syntax = "proto3";

package data;

option go_package = "pkg/generated/pbdata";

// TodoItemは一つのタスクを表します。
message TodoItem {
  // タスクの一意なID
  string id = 1;
  // タスクの内容
  string task = 2;
  // タスクが完了したかどうか
  bool is_completed = 3;
}

// TodoListは複数のタスクを含むリストを表します。
message TodoList {
  // TodoItemのリスト
  repeated TodoItem items = 1;
}
