syntax = "proto3";

import "google/protobuf/empty.proto";
import "pkg/proto/data/todo.proto";
package service;

option go_package = "pkg/generated/pbservice";

service TodoService {
  rpc AddTodo(data.TodoItem) returns (data.TodoItem);
  rpc ListTodos(google.protobuf.Empty) returns (data.TodoList);
}